fix bug on footer

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -163,8 +163,8 @@
  * Page content
  */
 .page-content {
-    // min-height: 80%;
-    height: 60vh;
+    min-height: 400px;
+    // height: 60vh;
     padding: $spacing-unit 0;
 }
 
