--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,24 @@
 layout: default
 comments: true
 ---
+
+{% assign post = page %}
+	{% if post.tags.size > 0 %}
+	    {% capture tags_content %}Posted in {% if post.tags.size == 1 %}<i class="fa fa-tag"></i>{% else %}<i class="fa fa-tags"></i>{% endif %}: {% endcapture %}
+	    {% for post_tag in post.tags %}
+	        {% for data_tag in site.data.tags %}
+	            {% if data_tag.slug == post_tag %}
+	                {% assign tag = data_tag %}
+	            {% endif %}
+	        {% endfor %}
+	        {% if tag %}
+	            {% capture tags_content_temp %}{{ tags_content }}<a href="/_site/tag/{{ tag.slug }}/">{{ tag.name }}</a>{% if forloop.last == false %}, {% endif %}{% endcapture %}
+	            {% assign tags_content = tags_content_temp %}
+	        {% endif %}
+	    {% endfor %}
+	{% else %}
+	    {% assign tags_content = '' %}
+	{% endif %}
 <div class="post">
 
   <header class="post-header">
@@ -12,6 +30,9 @@ comments: true
   <article class="post-content">
 	{{ content }}
   </article>
+
+
+  <p id="post-meta">{{ tags_content }}</p>
 
   <div id="disqus_thread"></div>
 	<script type="text/javascript">
