--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     {% include header.html %}
 
     <div class="page-content">
-      <div class="wrapper">
+      <div class="wrapper" style="max-width:calc(900px - (30px * 2));">
         {{ content }}
       </div>
     </div>
