--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,8 @@ comments: true
   <header class="post-header">
 	<h1 class="post-title">{{ page.title }}</h1>
 	<p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-		<img src='/img/tag.png' style='width:20px; height:20px;'></img>{{ tags_content }}
+		<!-- <img src='/img/tag.png' style='width:20px; height:20px;'></img>{{ tags_content }} -->
+		<span class="glyphicon glyphicon-tags" aria-hidden="true"></span>&nbsp;{{ tags_content }}
 	</p>
   </header>
 
