--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ comments: true
 <div class="post">
 {% assign post = page %}
 	{% if post.tags.size > 0 %}
-	    {% capture tags_content %} {% if post.tags.size == 1 %}<i class="fa fa-tag"></i>{% else %}<i class="fa fa-tags"></i>{% endif %}{% endcapture %}
+	    {% capture tags_content %} {% if post.tags.size == 1 %}<i class="fa fa-tag"></i>&nbsp;{% else %}<i class="fa fa-tags"></i>&nbsp;{% endif %}{% endcapture %}
 	    {% for post_tag in post.tags %}
 	        {% for data_tag in site.data.tags %}
 	            {% if data_tag.slug == post_tag %}
@@ -24,9 +24,9 @@ comments: true
 
   <header class="post-header">
 	<h1 class="post-title">{{ page.title }}</h1>
-	<p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	<p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ tags_content }}
 		<!-- <img src='/img/tag.png' style='width:20px; height:20px;'></img>{{ tags_content }} -->
-		<span class="glyphicon glyphicon-tags" aria-hidden="true"></span>&nbsp;{{ tags_content }}
+		<!-- <span class="glyphicon glyphicon-tags" aria-hidden="true"></span> -->
 	</p>
   </header>
 
