quick fixes for text align and invalid urls in blog_by_tag pages

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@ comments: true
 	</p>
   </header>
 
-  <article class="post-content">
+  <article class="post-content", style="text-align: justify;">
 	{{ content }}
   </article>
 
