--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -33,5 +33,12 @@
       </ul>
       </div>
   </div>
-
+  <div style="position: absolute;
+    right: 0px;
+    color: #7f8c8d;
+    width: 300px;
+    padding: 10px;
+    margin-bottom:40px;">
+    Powered by Jekyll and Github Pages
+    <div>
 </footer>
